<resources>
    <string name="app_name">SimpleTransceiver</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="speaker">speaker</string>
    <string name="send_on">送信ON</string>
    <string name="send_off">送信OFF</string>
    <string name="add_send_ip_address">送信先追加</string>
    <string name="add_foward_ip_address">転送先追加</string>
    <string name="ip_address">IPアドレス</string>
    <string name="camera">camera</string>
    <string name="mic">mic</string>
    <string name="movie">movie</string>
    <string name="sound">voice</string>
    <string name="mic_threshold">閾値:</string>
    <string name="speex_compress_level">品質:</string>
    <string name="filter">filter</string>
    <string name="rtp_receive">RTP receive</string>

    <string name="pref_key_rtp_port">pref_key_rtp_port</string>
    <string name="pref_default_value_rtp_port">22222</string>
    <string name="pref_key_ctrl_port">pref_key_ctrl_port</string>
    <string name="pref_default_value_ctrl_port">22221</string>
    <string name="pref_key_image_port">pref_key_image_port</string>
    <string name="pref_default_value_image_port">22223</string>
    <string name="pref_key_filter_threshold">pref_key_filter_threshold</string>
    <string name="pref_default_value_filter_threshold">0</string>
    <string name="pref_key_account_level">pref_key_account_level</string>
    <string name="pref_default_value_account_level">0</string>

</resources>
